# dknn

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: catch2.cmake.in  configure_catch2.cmake
examples/: data.csv  q1.csv  q2.csv  q3.csv  q4.csv  q5.csv
internal/: CMakeLists.txt
internal/include/dknn/: dknn.hpp  local_knn.hpp  typedefs.hpp
internal/include/dknn/__detail__/: dataset.hpp  gather.hpp  local_jobs.hpp  scatter.hpp  scatter_gather.hpp
internal/src/: dknn.c  dknn.cpp  local_knn.cpp
internal/src/__detail__/: dataset.cpp  gather.cpp  local_jobs.cpp  scatter.cpp  scatter_gather.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
test/testcases/: 00-local-job.cpp  00-local-knn.cpp  01-distributed-job.cpp  01-distributed.cpp  CMakeLists.txt
